--- a/styles/css/utilities.css
+++ b/styles/css/utilities.css
@@ -31,7 +31,7 @@
 }
 
 .d-0 {
-  display: none;
+  display: none !important;
 }
 
 .d-f {
